// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedHooksComponent renders props 1 1`] = `
<ForwardRef(Button)
  onClick={[Function]}
>
  hook1
</ForwardRef(Button)>
`;

exports[`ConnectedReactComponent renders props 1 1`] = `
<ForwardRef(Button)>
  Connect React Component
</ForwardRef(Button)>
`;

exports[`ConnectedReactComponentOwnProps renders props 1 1`] = `
<ForwardRef(Button)>
  ConnectedReactComponentOwnProps Label
</ForwardRef(Button)>
`;

exports[`ConnectedReactFCComponent renders props 1 1`] = `
<ForwardRef(Button)>
  ConnectedReactFCComponent Component
</ForwardRef(Button)>
`;

exports[`ConnectedReactFCComponentOwnProps renders props 1 1`] = `
<ForwardRef(Button)>
  ConnectedReactFCComponentOwnProps Label
</ForwardRef(Button)>
`;

exports[`Example renders props 1 1`] = `
<React.Fragment>
  <h1>
    Example of GreenXBlack redux toolkit
  </h1>
  <h1>
    Hooks results: 
    hook1
  </h1>
  <p>
    username input error: 
    username errors
  </p>
  <ForwardRef(Input)
    id="username"
    name="username"
    placeholder="username"
  />
  <ForwardRef(Button)>
    Handle React Form Submit
  </ForwardRef(Button)>
  <Memo(NoParams) />
  <ForwardRef(Button)
    onClick={[Function]}
  >
    Components.Button
  </ForwardRef(Button)>
  <div>
    <ForwardRef(Input)
      onChange={[Function]}
      placeholder="input1"
      value="input1"
    />
  </div>
  <div>
    <ForwardRef(Input)
      onChange={[Function]}
      placeholder="input2"
      value="input2"
    />
  </div>
  <div>
    <ForwardRef(Button)
      onClick={[MockFunction]}
    >
      Reset All Input
    </ForwardRef(Button)>
    <ForwardRef(Button)
      onClick={[Function]}
    >
      Reset Input 1
    </ForwardRef(Button)>
    <ForwardRef(Button)
      onClick={[Function]}
    >
      Reset Input 2
    </ForwardRef(Button)>
    <ForwardRef(Button)
      onClick={[Function]}
    >
      Set Input 1
    </ForwardRef(Button)>
    <ForwardRef(Button)
      onClick={[Function]}
    >
      Set Input 1
    </ForwardRef(Button)>
    <ForwardRef(Button)
      onClick={[Function]}
    >
      Set All Input
    </ForwardRef(Button)>
    <ForwardRef(Button)
      onClick={[MockFunction]}
    >
      Set From Thunk
    </ForwardRef(Button)>
    <Connected Hooks Component />
  </div>
  <ConnectReactComponent />
  <ConnectedReactComponentOwnProps
    label="ConnectedReactComponentOwnProps Label"
  />
</React.Fragment>
`;
